@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-03-30T16:18:53Z",
-  "count" : 1,
-  "count_minmax" : [ 1, 1 ],
+  "timestamp" : "2022-03-31T01:03:21Z",
+  "count" : 10,
+  "count_minmax" : [ 1, 10 ],
   "count_prev_day_inc" : 1,
   "count_prev_day_dec" : 0,
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
+  "uniques" : 5,
+  "uniques_minmax" : [ 1, 5 ],
   "uniques_prev_day_inc" : 1,
   "uniques_prev_day_dec" : 0
 }
