@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-03-30T16:18:53Z",
+  "timestamp" : "2022-03-31T01:03:21Z",
   "count_outdated" : 191,
   "uniques_outdated" : 81,
-  "count" : 218,
-  "uniques" : 94,
+  "count" : 227,
+  "uniques" : 98,
   "views" : [
     {
       "timestamp": "2022-03-17T00:00:00Z",
@@ -63,10 +63,10 @@
     },
     {
       "timestamp": "2022-03-30T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
+      "count": 10,
+      "count_minmax": [ 1, 10 ],
+      "uniques": 5,
+      "uniques_minmax": [ 1, 5 ]
     }
   ]
 }
