@@ -1,6 +1,6 @@
 {
-  "count": 27,
-  "uniques": 13,
+  "count": 36,
+  "uniques": 17,
   "views": [
     {
       "timestamp": "2022-03-17T00:00:00Z",
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2022-03-30T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 10,
+      "uniques": 5
     }
   ]
 }
